--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.hafclutch }}
-          password: ${{ secrets.dckr_pat_ZAvGRJlpgeEpwFn40KEewhkYlbw }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
